# duneuro_local_subtraction

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  Makefile.am  README.md  config.h.cmake  configure.ac  dubio.pc.in  dune.module  duneuro.pc.in
duneuro/: CMakeLists.txt
duneuro/common/: CMakeLists.txt  assembler.hh  cg_first_order_space.hh  cg_solver.hh  cg_solver_backend.hh  cg_to_udg_prolongation.hh  convection_diffusion_cg_default_parameter.hh  convection_diffusion_dg_default_parameter.hh  convection_diffusion_dg_operator.hh  convection_diffusion_udg_default_parameter.hh  cutfem_gridoperator.hh  cutfem_multi_phase_space.hh  cutfem_solver.hh  cutfem_solver_backend.hh  default_grids.hh  dense_matrix.hh  deprecated.cc  deprecated.hh  dg_solver.hh  dg_solver_backend.hh  dipole.hh  dipole_statistics.hh  dipole_statistics_factory.hh  distance_utilities.hh  dof_vector_evaluator.hh  edge_norm_provider.hh  edgehopping.hh  element_neighborhood_map.hh  element_patch.hh  element_patch_assembler.hh  entityset_volume_conductor.hh  exceptions.hh  fitted_driver_data.hh  flags.hh  function.hh  geometry_adaption.hh  gradient_space.hh  grid_function_mean.hh  grid_function_space_utilities.hh  image.hh  (+39 more)
duneuro/driver/: driver_2d.cc  driver_3d.cc  driver_factory.hh  driver_factory_impl.hh  driver_interface.hh  feature_manager.hh  fitted_volume_conductor.hh  fitted_volume_conductor_2d.cc  fitted_volume_conductor_3d.cc  unfitted_meeg_driver_data.hh  unfitted_volume_conductor.hh  unfitted_volume_conductor_2d.cc  unfitted_volume_conductor_3d.cc  volume_conductor_factory.hh  volume_conductor_factory_impl.hh  volume_conductor_interface.hh
duneuro/eeg/: CMakeLists.txt  analytic_utilities.hh  cg_source_model_factory.hh  closest_subentity_center_electrode_projection.hh  conforming_eeg_forward_solver.hh  conforming_transfer_matrix_solver.hh  conforming_transfer_matrix_user.hh  cutfem_source_model_factory.hh  dg_source_model_factory.hh  eeg_analytic_solution.hh  eeg_driver_factory.cc  eeg_driver_factory.hh  eeg_driver_interface.hh  eeg_forward_solver.hh  eeg_forward_solver_interface.hh  electrode_projection_factory.hh  electrode_projection_interface.hh  element_selection.hh  fitted_eeg_driver.cc  fitted_eeg_driver.hh  fitted_eeg_forward_solver.hh  fitted_point_transfer_matrix_rhs.hh  fitted_subtraction_source_model.hh  fitted_transfer_matrix_rhs_factory.hh  fitted_transfer_matrix_solver.hh  fitted_transfer_matrix_user.hh  local_subtraction_cg_local_operator.hh  local_subtraction_cg_p1_local_operator.hh  local_subtraction_dg_local_operator.hh  local_subtraction_source_model.hh  localized_subtraction_cg_local_operator.hh  localized_subtraction_cg_p1_local_operator.hh  localized_subtraction_dg_local_operator.hh  localized_subtraction_source_model.hh  monopolar_venant.hh  multipolar_venant.hh  normal_electrode_projection.hh  partial_integration_source_model.hh  patch_based_venant_source_model.hh  projected_electrodes.hh  (+37 more)
duneuro/inverse/: gof_utilities.hh  inverse_solver.cc  inverse_solver.hh
duneuro/io/: cauchy_grid_reader.hh  cauchy_tensor_reader.hh  cauchy_utilities.hh  data_tree.hh  dipole_reader.hh  entity_vtu_writer.hh  field_vector_reader.hh  fitted_tensor_vtk_functor.hh  gmsh_tensor_reader.hh  gmsh_writer.hh  hdf5_dataset_writers.hh  hdf5_dense_matrix.hh  indentation.cc  indentation.hh  matrix_io.hh  nifti_image_reader.hh  nifti_image_writer.hh  nifti_utilities.hh  point_vtk_writer.hh  projections_reader.hh  refined_vtk_writer.hh  volume_conductor_reader.hh  vtk_functors.hh  (+3 more)
(+196 files in other folders)
