# SPDX-FileCopyrightText: Copyright © duneuro contributors, see file LICENSE.md in module root
# SPDX-License-Identifier: LicenseRef-GPL-2.0-only-with-duneuro-exception OR LGPL-3.0-or-later
add_subdirectory(common)
add_subdirectory(eeg)
add_subdirectory(driver)
add_subdirectory(io)
add_subdirectory(meg)
add_subdirectory(test)
